Fixed overflow for body.

--- a/style/2-base/_global.scss
+++ b/style/2-base/_global.scss
@@ -1,7 +1,10 @@
 //Everything will be using border-box to make calculations easier.
 body, *, :root {
     box-sizing: border-box;
-    // overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 
